<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kpoint.pictochat.app.activities.AddUserActivity" >
    
    <TextView
        android:id="@+id/addUser_lblAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_user_add_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addUser_lblAddUser"
        android:layout_alignStart="@+id/addUser_lblAddUser"
        android:layout_below="@+id/addUser_lblAddUser"
        android:shrinkColumns="0"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addUser_lblFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/addUser_txtFirstName"
                android:text="@string/add_user_firstName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/addUser_txtFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addUser_lblLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/addUser_txtLastName"
                android:text="@string/add_user_lastName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/addUser_txtLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/addUser_lblPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/addUser_txtPin"
                android:text="@string/add_user_pin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/addUser_txtPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/addUser_btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_user_ok" />

    <Button
        android:id="@+id/addUser_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/addUser_btnOk"
        android:layout_toStartOf="@+id/addUser_btnOk"
        android:text="@string/add_user_cancel" />
    
</RelativeLayout>
