<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <android.gesture.GestureOverlayView
        android:id="@+id/login_gestureOverlayView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gestureColor="@android:color/transparent"
        android:uncertainGestureColor="@android:color/transparent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="bottom"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/login_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/login_lblUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_email" />

                <EditText
                    android:id="@+id/login_txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/login_lblPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password" />

                <EditText
                    android:id="@+id/login_txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/login_btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login" />

                <Button
                    android:id="@+id/login_btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_cancel" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/c_progress" />
    </android.gesture.GestureOverlayView>

</FrameLayout>